<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">evereco</string>
    <string name="app_name_ja">イベレコ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_calebdar">CalebdarActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- メニュー -->
    <string name="lblMenuCalendar">Calendar</string>
    <string name="lblMenuList">List</string>
    <string name="lblMenuOption">Option</string>
    <!-- 入力画面 -->
    <string name="lblEventName">件名</string>
    <string name="lblEventDate">日付</string>
    <string name="lblComment">コメント</string>
    <string name="lblInputLayoutTitle">イベント入力</string>
    <string name="lblInput">登録</string>
    <string name="lblClear">クリア</string>
    <string name="lblDelete">削除</string>
    <string name="lblListYear">年</string>
    <string name="lblListMonth">ヶ月</string>
    <string name="lblListDay">日</string>
    <string name="lblWeekdayMon">月</string>
    <string name="lblWeekdayTue">火</string>
    <string name="lblWeekdayWed">水</string>
    <string name="lblWeekdayTur">木</string>
    <string name="lblWeekdayFri">金</string>
    <string name="lblWeekdaySat">土</string>
    <string name="lblWeekdaySun">日</string>
    <string name="descCalIcon">予定あり</string>
    <!-- リスト画面 -->
    <string name="lblNewRecord">新規作成</string>
    <string name="lblDateSpan">表示期間</string>
    <string name="lblWaveDash">〜</string>
    <string name="lblBatsu">X</string>
</resources>
