<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
    <!-- ヘッダー-->
    <LinearLayout
        android:id="@+id/llCalendarHeader"
	    android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
	    android:orientation="horizontal"
        android:background="@color/whitelily">
	    <Button 
	        android:layout_width="30dp"
	        android:layout_height="30dp"
		    android:layout_marginStart="10dp"
		    android:layout_gravity="center_vertical"
	        android:gravity="center"
	        android:textSize="20sp"
	        android:background="@drawable/button_left_img"
	        android:id="@+id/btnCalPrev"/>
	    <TextView 
	        android:layout_width="120dp"
	        android:layout_height="match_parent"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
	        android:gravity="center"
	        android:textColor="@color/black"
	        android:textSize="20sp"
	        android:id="@+id/tvCalMonth"/>
	    <Button 
	        android:layout_width="30dp"
	        android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
	        android:gravity="center"
	        android:textSize="20sp"
	        android:background="@drawable/button_right"
	        android:id="@+id/btnCalNext"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:contentDescription="@string/str_blank"
            android:id="@+id/ivCalFamily"/>
        <TextView
            android:id="@+id/tvCalFamilyName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:scrollHorizontally="true"/>
    </LinearLayout>
	<!-- 曜日欄-->
    <LinearLayout
        android:id="@+id/llCalendarWeekday"
	    android:layout_height="20dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/llCalendarHeader"
		android:background="@color/usukuminezu"
	    android:orientation="horizontal">
	    <TextView
	        android:id="@+id/tvCalWeekday01"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/lblWeekdaySun"
            android:textStyle="bold"
	        android:textColor="@color/tomato" />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
            android:textColor="@color/taupe"
	        android:text="@string/lblWeekdayMon"
            android:textStyle="bold"
	        android:id="@+id/tvCalWeekday02"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
			android:textColor="@color/taupe"
	        android:text="@string/lblWeekdayTue"
            android:textStyle="bold"
	        android:id="@+id/tvCalWeekday03"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
			android:textColor="@color/taupe"
	        android:text="@string/lblWeekdayWed"
            android:textStyle="bold"
	        android:id="@+id/tvCalWeekday04"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
			android:textColor="@color/taupe"
	        android:text="@string/lblWeekdayTur"
            android:textStyle="bold"
	        android:id="@+id/tvCalWeekday05"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
			android:textColor="@color/taupe"
	        android:text="@string/lblWeekdayFri"
            android:textStyle="bold"
	        android:id="@+id/tvCalWeekday06"/>
	    <TextView
	        android:id="@+id/tvCalWeekday07"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/lblWeekdaySat"
            android:textStyle="bold"
	        android:textColor="@color/steelblue" />
    </LinearLayout>
	<TableLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/llCalendarWeekday"
	    android:id="@+id/tlCalendar">
	    
	    <TableRow
	        android:id="@+id/trCal01"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"/>
	
	    <TableRow
	        android:id="@+id/trCal02"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	    
	    <TableRow
	        android:id="@+id/trCal03"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	    
	    <TableRow
	        android:id="@+id/trCal04"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	    
	    <TableRow
	        android:id="@+id/trCal05"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	    
	    <TableRow
	        android:id="@+id/trCal06"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	</TableLayout>
</RelativeLayout>