<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
    
    <LinearLayout
        android:id="@+id/llCalendarHeader"
	    android:layout_height="30dp"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
	    android:orientation="horizontal"
        android:background="@color/black">
	    <TextView 
	        android:layout_width="30dp"
	        android:layout_height="30dp"
		    android:layout_marginStart="10dp"
		    android:layout_gravity="center_vertical"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:textSize="20sp"
	        android:background="@drawable/button_left_img"
	        android:id="@+id/tvCalPrev"/>
	    <TextView 
	        android:layout_width="150dp"
	        android:layout_height="match_parent"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:textSize="20sp"
	        android:background="@color/black"
	        android:id="@+id/tvCalMonth"/>
	    <TextView 
	        android:layout_width="30dp"
	        android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:textSize="20sp"
	        android:background="@drawable/button_right"
	        android:id="@+id/tvCalNext"/>
    </LinearLayout>
    <ImageView 
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toStartOf="@+id/tvCalFamilyName"
        android:gravity="center"
        android:contentDescription="@string/str_blank"
        android:id="@+id/ivCalFamily"/>
    <TextView 
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:gravity="start"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="---"
        android:id="@+id/tvCalFamilyName"/>
    <LinearLayout
        android:id="@+id/llCalendarWeekday"
	    android:layout_height="30dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/llCalendarHeader"
	    android:orientation="horizontal">

	    <TextView
	        android:id="@+id/tvCalWeekday01"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@color/black"
	        android:gravity="center"
	        android:text="@string/lblWeekdaySun"
	        android:textColor="@color/tomato" />

	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:text="@string/lblWeekdayMon"
	        android:background="@color/black"
	        android:id="@+id/tvCalWeekday02"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:text="@string/lblWeekdayTue"
	        android:background="@color/black"
	        android:id="@+id/tvCalWeekday03"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:text="@string/lblWeekdayWed"
	        android:background="@color/black"
	        android:id="@+id/tvCalWeekday04"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:text="@string/lblWeekdayTur"
	        android:background="@color/black"
	        android:id="@+id/tvCalWeekday05"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:text="@string/lblWeekdayFri"
	        android:background="@color/black"
	        android:id="@+id/tvCalWeekday06"/>

	    <TextView
	        android:id="@+id/tvCalWeekday07"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@color/black"
	        android:gravity="center"
	        android:text="@string/lblWeekdaySat"
	        android:textColor="@color/steelblue" />

    </LinearLayout>
	<TableLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/llCalendarWeekday"
	    android:id="@+id/tlCalendar">
	    
	    <TableRow
	        android:id="@+id/trCal01"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"/>
	
	    <TableRow
	        android:id="@+id/trCal02"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	    
	    <TableRow
	        android:id="@+id/trCal03"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	    
	    <TableRow
	        android:id="@+id/trCal04"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	    
	    <TableRow
	        android:id="@+id/trCal05"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	    
	    <TableRow
	        android:id="@+id/trCal06"
	        android:layout_width="0dp"
	        android:layout_height="match_parent" 
	        android:layout_weight="1"/>
	</TableLayout>
    <TextView
        android:id="@+id/vSelectedFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/SELECTED"
        android:visibility="gone"/>
</RelativeLayout>