<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
        android:id="@+id/llInputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:background="@drawable/background_inputdialog_title">
    <Button 
        android:id="@+id/btnPrevDay"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:background="@drawable/button_left"
        />
    
    <TextView
        android:id="@+id/tvDialogDate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold">
        <requestFocus/>
    </TextView>
    <Button 
        android:id="@+id/btnNextDay"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:background="@drawable/button_right"
        />
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvDialogFamily_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible">
    </TextView>
    <LinearLayout
        android:id="@+id/llDialogCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llInputTitle"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center">
		<jp.sheepman.famical.view.CustomNumberPicker
		    android:id="@+id/cnpDialogPeCount"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    />
		<jp.sheepman.famical.view.CustomNumberPicker
		    android:id="@+id/cnpDialogPoCount"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnDialogInput"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/lblInput"/>

        <Button
            android:id="@+id/btnDialogClear"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/lblClear" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDialogDelete"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/lblDelete" />

</RelativeLayout>
